--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -46,7 +46,7 @@ jobs:
         run: sudo apt install --fix-missing -y libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
 
       - name: Generate API documents
-        run: nimble doc --index:on --project --out:docs --hints:off src/nodesnim.nim
+        run: nim doc --index:on --project --out:docs --hints:off src/nodesnim.nim
 
       - name: Deploy documents
         uses: peaceiris/actions-gh-pages@v3
