--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Build examples
         run: |
           cd examples
-          for dir in hello_world calculator novel snake screensaver roguelike; do
+          for dir in hello_world calculator novel snake screensaver roguelike sample_messenger; do
             (
               cd "$dir"
               nim c main.nim
