--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,7 +60,7 @@ jobs:
           for dir in hello_world calculator novel snake screensaver roguelike sample_messenger; do
             (
               cd "$dir"
-              nim c main.nim
+              nim c main.nim --threads:on
               timeout 2 xvfb-run --auto-servernum --server-num=1 ./main || [ $? -eq ${{ env.TIMEOUT_EXIT_STATUS }} ]
             )
           done
