--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,10 +57,10 @@ jobs:
       - name: Build examples
         run: |
           cd examples
-          for dir in hello_world calculator novel snake screensaver roguelike sample_messenger; do
+          for dir in hello_world calculator novel snake screensaver roguelike; do
             (
               cd "$dir"
-              nim c main.nim --threads:on
+              nim c main.nim
               timeout 2 xvfb-run --auto-servernum --server-num=1 ./main || [ $? -eq ${{ env.TIMEOUT_EXIT_STATUS }} ]
             )
           done
