--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,7 +60,7 @@ jobs:
           for dir in hello_world calculator novel snake screensaver roguelike builder_features; do
             (
               cd "$dir"
-              nim c main.nim
+              nim c -d:debug main.nim
               timeout 2 xvfb-run --auto-servernum --server-num=1 ./main || [ $? -eq ${{ env.TIMEOUT_EXIT_STATUS }} ]
             )
           done
@@ -70,7 +70,7 @@ jobs:
           cd tests
           for file in $(ls -v test*.nim); do
             echo "test: $file"
-            nim c $file
+            nim c -d:debug $file
             timeout 2 xvfb-run --auto-servernum --server-num=1 ./${file%%.nim} || [ $? -eq ${{ env.TIMEOUT_EXIT_STATUS }} ]
           done
         shell: bash
